# remarkable-ca-code

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
include/: HTTPClient.hpp  Report.hpp  SystemInfo.hpp  hello_world.h  init_utils.h  log_utils.h  sys_utils.h
src/: HTTPClient.cpp  Report.cpp  SystemInfo.cpp  hello_world.cpp  main.cpp  sys_utils.c
tests/: test_hello_world.cpp
utils/: mock_server.py
